--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "dropzone": "^5.7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
@@ -25,5 +26,8 @@
     },
     "dependencies": {
         "gulp": "^4.0.2"
+    },
+    "optionalDependencies": {
+        "fsevents": "^2.1.2"
     }
 }
